0026476: Visualization, TKOpenGl - do not enable GL_NORMALIZE in core profile